--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
   <hr>
   
   <p>
-    <sup>
-      1 
-    </sup>
-    Garry Kasparov is a Russian chess Grandmaster and former World Chess Champion
+    Garry Kasparov <sup> 1 </sup> is a Russian chess Grandmaster and former World Chess Champion
   </p>  
 </body>
 </html>
