--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
  
 
   <p>
-    Perhaps this is why we are so captivated by human vs. machine competitions, because the idea of being overcome by that which we’ve created speaks to something very deep within our collective consciousness. When IBM’s Deep Blue faced off against Garry Kasparov1, the event resulted in more than 
+    Perhaps this is why we are so captivated by human vs. machine competitions, because the idea of being overcome by that which we’ve created speaks to something very deep within our collective consciousness. When IBM’s Deep Blue faced off against Garry Kasparov1<sup> 1 </sup>, the event resulted in more than 
     <a href="http://www-03.ibm.com/ibm/history/ibm100/us/en/icons/deepblue/"> three billion impressions</a> around the world, and when IBM’s later creation Watson challenged the champions on Jeopardy, millions of viewers were glued to the proceedings.
   </p>  
 
@@ -87,7 +87,8 @@
   <hr>
   
   <p>
-    Garry Kasparov<sup> 1 </sup> is a Russian chess Grandmaster and former World Chess Champion
+    <sup> 1 </sup>
+    Garry Kasparov is a Russian chess Grandmaster and former World Chess Champion
   </p>  
 </body>
 </html>
